--- a/course.html
+++ b/course.html
@@ -352,7 +352,7 @@
   <h2>🏆 إنجازك بعد الدورة</h2>
   <div class="certificate-section" data-aos="zoom-in">
     <img src="https://i.ibb.co/L519VjL/certificate.png" alt="نموذج شهادة الدورة">
-    <p style="margin-top:10px; font-weight:bold; color:var(--primary-color);" id="achievements-text"></p>
+    <ul id="achievements-list" style="margin-top:20px; font-weight:bold; color:var(--primary-color); list-style:none; padding-right:0;"></ul>
   </div>
 
   <section>
@@ -425,3 +425,4 @@
 </html>
 
 
+ 
