--- a/course.html
+++ b/course.html
@@ -1,73 +1,53 @@
-// ====== جلب ID من الرابط (?id=...) ======
+// جلب ID من الرابط (?id=...)
 const urlParams = new URLSearchParams(window.location.search);
 const courseId = urlParams.get('id');
 
-// ====== رابط Web App ======
-const webAppUrl = "https://script.google.com/macros/s/AKfycbwY-4cac3jIZ-OHP1l3p4Fb4oiEgonQvxKu5h7swhpov8iMZXmQ7VpDTX_GG5zq9kIn2g/exec";
-
-// ====== دالة مساعدة لملأ القوائم ======
-function fillList(listId, text, icon = '') {
-  const list = document.getElementById(listId);
-  if (!list) return;
-  list.innerHTML = '';
-  (text || "").split('|').forEach(item => {
-    if(item.trim() !== "") {
-      const li = document.createElement("li");
-      li.innerHTML = `${icon}${item.trim()}`;
-      list.appendChild(li);
-    }
-  });
-}
-
-// ====== دالة مساعدة لملأ الأسئلة الشائعة ======
-function fillFAQs(containerId, faqsText) {
-  const container = document.getElementById(containerId);
-  if (!container || !faqsText) return;
-  container.innerHTML = '';
-  faqsText.split('|').forEach(faq => {
-    const [question, answer] = faq.split(':');
-    if(question && answer){
-      const div = document.createElement("div");
-      div.classList.add("faq-item");
-      div.innerHTML = `
-        <div class="faq-question">${question}<i class="fas fa-chevron-down"></i></div>
-        <div class="faq-answer">${answer}</div>
-      `;
-      container.appendChild(div);
-    }
-  });
-}
-
-// ====== جلب البيانات من Web App ======
-fetch(webAppUrl)
-  .then(res => res.json())
+// استدعاء البيانات من Google Apps Script Web App
+fetch('https://script.google.com/macros/s/AKfycbwY-4cac3jIZ-OHP1l3p4Fb4oiEgonQvxKu5h7swhpov8iMZXmQ7VpDTX_GG5zq9kIn2g/exec')
+  .then(response => response.json())
   .then(data => {
-    // البحث عن الدورة بالـ id أو اختيار أول عنصر
-    let course = Array.isArray(data) ? data.find(c => c.id === courseId) || data[0] : data;
-    if(!course){
-      console.error("❌ لم يتم العثور على الدورة.");
-      return;
+    let course;
+    // إذا JSON مصفوفة
+    if (Array.isArray(data)) {
+      course = data.find(c => c.id === courseId) || data[0]; // افتراضي أول دورة
+    } else {
+      course = data; // كائن واحد فقط
     }
 
-    console.log("الدورة المختارة:", course); // للتأكد
+    // ملأ العناصر بالبيانات
+    document.getElementById("page-title").textContent = course.title;
+    document.getElementById("hero-title").textContent = course.title;
+    document.getElementById("hero-description").textContent = course.heroDescription;
+    document.getElementById("marquee-text").textContent = course.marqueeText;
+    document.getElementById("course-about").textContent = course.courseAbout;
 
-    // ملأ الحقول الأساسية
-    document.getElementById("page-title")?.textContent = course.title || "";
-    document.getElementById("hero-title")?.textContent = course.title || "";
-    document.getElementById("hero-description")?.textContent = course.heroDescription || "";
-    document.getElementById("marquee-text")?.textContent = course.marqueeText || "";
-    document.getElementById("course-about")?.textContent = course.courseAbout || "";
+    // الأهداف
+    const objectivesList = document.getElementById("objectives-list");
+    objectivesList.innerHTML = "";
+    if(course.objectives){
+      course.objectives.split('|').forEach(obj => {
+        const li = document.createElement("li");
+        li.innerHTML = `<i class="fas fa-check-circle"></i>${obj.trim()}`;
+        objectivesList.appendChild(li);
+      });
+    }
 
-    // القوائم
-    fillList("objectives-list", course.objectives, '<i class="fas fa-check-circle"></i>');
-    fillList("axes-list", course.axes, '<i class="fas fa-circle"></i>');
-    fillList("achievements-list", course.achievementsText);
+    // المحاور
+    const axesList = document.getElementById("axes-list");
+    axesList.innerHTML = "";
+    if(course.axes){
+      course.axes.split('|').forEach(ax => {
+        const li = document.createElement("li");
+        li.innerHTML = `<i class="fas fa-circle"></i>${ax.trim()}`;
+        axesList.appendChild(li);
+      });
+    }
 
     // المدربين
     const instructorsSlider = document.getElementById("instructors-slider");
-    if(instructorsSlider){
-      instructorsSlider.innerHTML = '';
-      course.instructors?.forEach(inst => {
+    instructorsSlider.innerHTML = "";
+    if(course.instructors && course.instructors.length){
+      course.instructors.forEach(inst => {
         const div = document.createElement("div");
         div.classList.add("instructor-slide", "active");
         div.innerHTML = `<div class="instructor-card"><h4>${inst.name}</h4></div>`;
@@ -77,9 +57,9 @@ fetch(webAppUrl)
 
     // آراء المتدربين
     const testimonialsSlider = document.getElementById("testimonials-slider");
-    if(testimonialsSlider){
-      testimonialsSlider.innerHTML = '';
-      course.testimonials?.forEach(test => {
+    testimonialsSlider.innerHTML = "";
+    if(course.testimonials && course.testimonials.length){
+      course.testimonials.forEach(test => {
         const div = document.createElement("div");
         div.classList.add("testimonial-slide", "active");
         div.innerHTML = `<p class="testimonial-text">"${test.text}"</p>`;
@@ -88,25 +68,52 @@ fetch(webAppUrl)
     }
 
     // الأسئلة الشائعة
-    fillFAQs("faq-container", course.faqs);
+    const faqContainer = document.getElementById("faq-container");
+    faqContainer.innerHTML = "";
+    if(course.faqs){
+      const faqsArray = course.faqs.split('|');
+      faqsArray.forEach(faq => {
+        const [question, answer] = faq.split(':');
+        if(question && answer){
+          const div = document.createElement("div");
+          div.classList.add("faq-item");
+          div.innerHTML = `
+            <div class="faq-question">${question}<i class="fas fa-chevron-down"></i></div>
+            <div class="faq-answer">${answer}</div>
+          `;
+          faqContainer.appendChild(div);
+        }
+      });
+    }
+
+    // الإنجازات
+    const achievementsText = document.getElementById("achievements-text");
+    if(course.achievementsText){
+      achievementsText.textContent = course.achievementsText.split('|').join(' | ');
+    }
 
     // الفيديو
     if(course.videoUrl){
-      const videoFrame = document.querySelector(".video-section iframe");
-      if(videoFrame) videoFrame.src = course.videoUrl;
+      const videoSection = document.querySelector(".video-section iframe");
+      videoSection.src = course.videoUrl;
     }
 
     // تحديث اسم الدورة في النموذج
     const courseNameInput = document.getElementById("course-name-input");
-    if(courseNameInput) courseNameInput.value = course.title || "";
+    if(courseNameInput) courseNameInput.value = course.title;
 
   })
-  .catch(err => console.error("خطأ في تحميل بيانات الدورة:", err));
+  .catch(error => console.error("خطأ في تحميل بيانات الدورة:", error));
 
-// ====== FAQ toggle ======
+// FAQ toggle
 document.addEventListener("click", function(e){
   if(e.target.classList.contains("faq-question")){
     e.target.classList.toggle("active");
-    e.target.nextElementSibling?.classList.toggle("visible");
+    const answer = e.target.nextElementSibling;
+    if(answer.style.display === "block"){
+      answer.style.display = "none";
+    } else {
+      answer.style.display = "block";
+    }
   }
 });
