--- a/course.html
+++ b/course.html
@@ -220,7 +220,7 @@
     border-radius: 10px;
     cursor:pointer;
     transition: background-color 0.3s, transform 0.2s;
-    box-shadow: 3px 6px 15px rgba(0,0,0,0.2);
+    box-shadow: 0 3px 12px rgba(0,0,0,0.2);
   }
   #registrationForm button:hover {
     background: #003366;
