--- a/course.html
+++ b/course.html
@@ -13,12 +13,12 @@
   gtag('js', new Date());
   gtag('config', 'AW-17515401485');
 </script>
-
 <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
 
 <style>
+  /* تعاريف الألوان والخطوط الأساسية */
   :root {
     --primary-color: #011f4b;
     --secondary-color: #fec107;
@@ -30,7 +30,7 @@
   body { background-color: var(--bg-color); color: var(--text-color); line-height: 1.6; }
   .container { width: 90%; max-width: 900px; margin: 20px auto; padding: 25px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); background-color: #fff; }
 
-  /* Header */
+  /* تصميم رأس الصفحة (Header) */
   header {
     background: var(--primary-color);
     color: #fff;
@@ -74,7 +74,7 @@
     nav a { margin: 5px 10px; font-size: 14px; }
   }
   
-  /* Hero Section */
+  /* تصميم قسم الأبطال (Hero Section) */
   .hero {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1549414002-3c2b189736c4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover no-repeat;
     background-attachment: fixed;
@@ -87,7 +87,7 @@
   .hero-text h2 { font-size: 32px; font-weight: 800; margin-bottom: 15px; color: var(--secondary-color); }
   .hero-text p { font-size: 18px; line-height: 1.8; }
 
-  /* Marquee */
+  /* شريط التمرير المتحرك (Marquee) */
   .marquee { background-color: var(--secondary-color); color: var(--primary-color); overflow: hidden; white-space: nowrap; padding: 10px 0; font-weight: bold; text-align: center; }
   .marquee span { display: inline-block; animation: marquee 20s linear infinite; }
   @keyframes marquee {
@@ -95,22 +95,22 @@
     100% { transform: translateX(100%); }
   }
   
-  /* Section Titles */
+  /* عناوين الأقسام */
   h2 { color: var(--primary-color); margin: 25px 0 15px; border-bottom: 3px solid var(--accent-color); padding-bottom: 8px; font-size: 24px; font-weight: 700; }
   
-  /* Buttons and links */
+  /* الأزرار والروابط */
   .btn { display: inline-block; padding: 12px 25px; background: var(--primary-color); color: #fff; text-decoration: none; border-radius: 8px; font-weight: 700; transition: transform 0.3s, box-shadow 0.3s; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); }
   .btn:hover { background: #003366; transform: translateY(-3px); box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25); }
   .btn-register { background: var(--accent-color); color: var(--primary-color); font-weight: 800; }
   .btn-register:hover { background: #44b694; }
 
-  /* Lists and Icons */
+  /* القوائم والأيقونات */
   ul { list-style: none; padding-left: 0; }
   li { margin-bottom: 12px; display: flex; align-items: flex-start; font-size: 16px; }
   li i { color: var(--secondary-color); margin-left: 10px; font-size: 20px; transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out; }
   li:hover i { transform: rotate(10deg) scale(1.1); filter: brightness(1.2); }
 
-  /* Testimonials Slider */
+  /* تصميم السلايدر (آراء المتدربين والمدربين) */
   .testimonials-slider, .instructors-slider {
       position: relative;
       overflow: hidden;
@@ -142,7 +142,7 @@
   .dot { display: inline-block; width: 10px; height: 10px; margin: 0 5px; background: #ccc; border-radius: 50%; cursor: pointer; transition: background 0.3s; }
   .dot.active { background: var(--primary-color); }
   
-  /* FAQ */
+  /* قسم الأسئلة الشائعة (FAQ) */
   .faq-item { margin-bottom: 15px; }
   .faq-question {
     background: #e9ecef;
@@ -173,12 +173,12 @@
   .faq-question i { transition: transform 0.3s; }
   .faq-question.active i { transform: rotate(180deg); }
 
-  /* Certificate */
+  /* قسم الشهادة */
   .certificate-section { text-align: center; padding: 20px 0; }
   .certificate-section img { max-width: 100%; height: auto; border: 5px solid var(--primary-color); border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); transition: transform 0.3s; }
   .certificate-section img:hover { transform: scale(1.03); }
 
-  /* Sticky Buttons */
+  /* الأزرار الثابتة (Sticky Buttons) في أسفل الصفحة */
   .sticky-register-btn {
       position: fixed;
       bottom: 20px;
@@ -228,7 +228,7 @@
       bottom: -100px;
   }
 
-  /* Footer */
+  /* تصميم قسم التذييل (Footer) */
   footer {
     background: var(--primary-color);
     color: #fff;
@@ -297,7 +297,7 @@
 
   <h2>❓ الأسئلة الشائعة</h2>
   <div id="faq-container" class="faq-container" data-aos="fade-up">
-    </div>
+  </div>
 
   <h2>🏆 إنجازك بعد الدورة</h2>
   <div class="certificate-section" data-aos="zoom-in">
@@ -346,21 +346,28 @@
 <script>
     AOS.init();
 
+    // رابط الـ Google Apps Script الذي يجلب بيانات الدورات
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwQ7vlFHMHwVcr11t8UuBqUB5XBQhbINem5HRzhmmcbaQC-dD2RtSxyKZ5lAY2eywmwTA/exec';
 
+    // الحصول على معرف الدورة من رابط الصفحة
     const urlParams = new URLSearchParams(window.location.search);
     const courseId = urlParams.get('id');
 
+    // الدالة الرئيسية التي تجلب وتُظهر بيانات الدورة
     async function loadCourseData() {
         try {
+            // جلب البيانات من Google Apps Script
             const response = await fetch(WEB_APP_URL);
             const allCourses = await response.json();
 
+            // البحث عن الدورة التي تطابق المعرف في الرابط
             const course = allCourses.find(c => c.id === courseId);
 
+            // في حال عدم العثور على الدورة، يتم عرض رسالة خطأ
             if (!course) {
                 document.getElementById('hero-title').innerText = "⚠️ لم يتم العثور على الدورة المطلوبة";
                 document.getElementById('hero-description').innerText = "يرجى العودة إلى صفحة الدورات واختيار دورة صحيحة.";
+                // إخفاء جميع الأقسام لمنع ظهورها فارغة
                 document.querySelector('.marquee').style.display = 'none';
                 document.querySelector('.video-section').style.display = 'none';
                 document.getElementById('course-about').parentElement.style.display = 'none';
@@ -373,13 +380,14 @@
                 return;
             }
 
+            // تحديث محتوى الصفحة ببيانات الدورة
             document.getElementById('hero-title').innerText = course.title || "";
             document.getElementById('hero-description').innerText = course.heroDescription || "";
             document.getElementById('marquee-text').innerText = course.marqueeText || "";
             document.querySelector('.video-section iframe').src = course.videoUrl || "";
             document.getElementById('course-about').innerText = course.courseAbout || "";
-            document.getElementById('course-name-input').value = course.title || "";
 
+            // تحديث قائمة الأهداف
             const objectivesList = document.getElementById('objectives-list');
             objectivesList.innerHTML = '';
             if (course.objectives) {
@@ -389,13 +397,10 @@
                         li.innerHTML = `<i class="fa fa-check-circle"></i> ${objText.trim()}`;
                         objectivesList.appendChild(li);
                     });
-                } catch(e) {
-                    console.error('Error parsing objectives:', e);
-                }
-            } else {
-                objectivesList.parentElement.style.display = 'none';
-            }
+                } catch(e) { console.error('Error parsing objectives:', e); }
+            } else { objectivesList.parentElement.style.display = 'none'; }
 
+            // تحديث قائمة المحاور
             const axesList = document.getElementById('axes-list');
             axesList.innerHTML = '';
             if (course.axes) {
@@ -405,16 +410,13 @@
                         li.innerHTML = `<i class="fa fa-arrow-alt-circle-left"></i> ${axesText.trim()}`;
                         axesList.appendChild(li);
                     });
-                } catch(e) {
-                    console.error('Error parsing axes:', e);
-                }
-            } else {
-                axesList.parentElement.style.display = 'none';
-            }
+                } catch(e) { console.error('Error parsing axes:', e); }
+            } else { axesList.parentElement.style.display = 'none'; }
 
+            // تحديث سلايدر المدربين وإنشاء الدوائر
             const instructorsSlider = document.getElementById('instructors-slider');
             const instructorDots = instructorsSlider.querySelector('.instructor-dots');
-            instructorsSlider.innerHTML = '';
+            instructorsSlider.innerHTML = ''; // مسح المحتوى القديم
             if (course.instructors) {
                 try {
                     const instructors = JSON.parse(course.instructors);
@@ -434,7 +436,7 @@
                         instructorDots.appendChild(dot);
                     });
                 } catch (e) {
-                    try {
+                    try { // حالة الطوارئ: إذا فشل الـ JSON
                         const instructorNames = course.instructors.split('|');
                         instructorNames.forEach((inst, i) => {
                             const [name, role] = inst.split(' - ');
@@ -452,18 +454,15 @@
                             dot.dataset.slideIndex = i;
                             instructorDots.appendChild(dot);
                         });
-                    } catch(e2) {
-                        instructorsSlider.parentElement.style.display = 'none';
-                    }
+                    } catch(e2) { instructorsSlider.parentElement.style.display = 'none'; }
                 }
-            } else {
-                instructorsSlider.parentElement.style.display = 'none';
-            }
+            } else { instructorsSlider.parentElement.style.display = 'none'; }
             instructorsSlider.appendChild(instructorDots);
             
+            // تحديث سلايدر آراء المتدربين وإنشاء الدوائر
             const testimonialsSlider = document.getElementById('testimonials-slider');
             const testimonialDots = testimonialsSlider.querySelector('.testimonial-dots');
-            testimonialsSlider.innerHTML = '';
+            testimonialsSlider.innerHTML = ''; // مسح المحتوى القديم
             if (course.testimonials) {
                 try {
                     const testimonials = JSON.parse(course.testimonials);
@@ -478,7 +477,7 @@
                         testimonialDots.appendChild(dot);
                     });
                 } catch (e) {
-                    try {
+                    try { // حالة الطوارئ: إذا فشل الـ JSON
                         const testimonialList = course.testimonials.split('|');
                         testimonialList.forEach((t, i) => {
                             const [text, name] = t.split(' - ');
@@ -491,15 +490,12 @@
                             dot.dataset.slideIndex = i;
                             testimonialDots.appendChild(dot);
                         });
-                    } catch(e2) {
-                        testimonialsSlider.parentElement.style.display = 'none';
-                    }
+                    } catch(e2) { testimonialsSlider.parentElement.style.display = 'none'; }
                 }
-            } else {
-                testimonialsSlider.parentElement.style.display = 'none';
-            }
+            } else { testimonialsSlider.parentElement.style.display = 'none'; }
             testimonialsSlider.appendChild(testimonialDots);
 
+            // تحديث قسم الأسئلة الشائعة
             const faqContainer = document.getElementById('faq-container');
             faqContainer.innerHTML = '';
             if (course.faqs) {
@@ -521,7 +517,7 @@
                         });
                     });
                 } catch (e) {
-                    try {
+                    try { // حالة الطوارئ: إذا فشل الـ JSON
                         const faqList = course.faqs.split('|');
                         faqList.forEach(f => {
                             const [question, answer] = f.split(':');
@@ -539,14 +535,11 @@
                                 ans.style.display = ans.style.display === 'block' ? 'none' : 'block';
                             });
                         });
-                    } catch(e2) {
-                        faqContainer.parentElement.style.display = 'none';
-                    }
+                    } catch(e2) { faqContainer.parentElement.style.display = 'none'; }
                 }
-            } else {
-                faqContainer.parentElement.style.display = 'none';
-            }
+            } else { faqContainer.parentElement.style.display = 'none'; }
 
+            // تحديث قائمة الإنجازات
             const achievementsList = document.getElementById('achievements-list');
             achievementsList.innerHTML = '';
             if (course.achievementsText) {
@@ -556,13 +549,10 @@
                         li.innerHTML = `<i class="fa fa-star"></i> ${achText.trim()}`;
                         achievementsList.appendChild(li);
                     });
-                } catch(e) {
-                    console.error('Error parsing achievements:', e);
-                }
-            } else {
-                achievementsList.parentElement.style.display = 'none';
-            }
+                } catch(e) { console.error('Error parsing achievements:', e); }
+            } else { achievementsList.parentElement.style.display = 'none'; }
             
+            // تحديث رابط زر التسجيل
             const registerLink = document.getElementById('register-link');
             if (registerLink && course.title) {
                 const encodedCourseTitle = encodeURIComponent(course.title);
@@ -571,8 +561,10 @@
 
         } catch (err) {
             console.error('Error fetching course data:', err);
+            // عرض رسالة خطأ في حال فشل جلب البيانات
             document.getElementById('hero-title').innerText = "⚠️ حدث خطأ أثناء تحميل البيانات";
             document.getElementById('hero-description').innerText = "تأكد من اتصالك بالإنترنت وحاول مرة أخرى.";
+            // إخفاء جميع الأقسام لمنع ظهورها فارغة
             document.querySelector('.marquee').style.display = 'none';
             document.querySelector('.video-section').style.display = 'none';
             document.getElementById('course-about').parentElement.style.display = 'none';
@@ -586,6 +578,7 @@
     }
     loadCourseData();
 </script>
+
 <script src="sliderfr.js"></script>
 
 </body>
