--- a/course.html
+++ b/course.html
@@ -16,235 +16,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
-
-<style>
-  /* تعاريف الألوان والخطوط الأساسية */
-  :root {
-    --primary-color: #011f4b;
-    --secondary-color: #fec107;
-    --accent-color: #5ad5b0;
-    --text-color: #212529;
-    --bg-color: #f8f9fa;
-  }
-  * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Tajawal', sans-serif; }
-  body { background-color: var(--bg-color); color: var(--text-color); line-height: 1.6; }
-  .container { width: 90%; max-width: 900px; margin: 20px auto; padding: 25px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); background-color: #fff; }
-
-  /* تصميم رأس الصفحة (Header) */
-  header {
-    background: var(--primary-color);
-    color: #fff;
-    padding: 15px 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  }
-  header h1 { font-size: 26px; font-weight: 700; color: var(--secondary-color); }
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 20px;
-    font-weight: 600;
-    font-size: 16px;
-    transition: all 0.3s ease;
-    position: relative;
-    padding-bottom: 5px;
-  }
-  nav a:hover { color: var(--accent-color); }
-  nav a::after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    background: var(--accent-color);
-    left: 0;
-    bottom: 0;
-    transition: width 0.3s ease-in-out;
-  }
-  nav a:hover::after { width: 100%; }
-  @media (max-width: 768px) {
-    header { flex-direction: column; text-align: center; padding: 15px 15px 10px; }
-    header h1 { margin-bottom: 10px; }
-    nav { margin-top: 10px; width: 100%; display: flex; justify-content: center; flex-wrap: wrap; }
-    nav a { margin: 5px 10px; font-size: 14px; }
-  }
-  
-  /* تصميم قسم الأبطال (Hero Section) */
-  .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1549414002-3c2b189736c4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8fGVufDB8fHx8fA%3D%3D') center/cover no-repeat;
-    background-attachment: fixed;
-    text-align: center;
-    padding: 120px 20px 80px;
-    position: relative;
-    color: #fff;
-  }
-  .hero-text { background: rgba(1, 31, 75, 0.8); padding: 30px; border-radius: 15px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4); max-width: 800px; margin: 0 auto; }
-  .hero-text h2 { font-size: 32px; font-weight: 800; margin-bottom: 15px; color: var(--secondary-color); }
-  .hero-text p { font-size: 18px; line-height: 1.8; }
-
-  /* شريط التمرير المتحرك (Marquee) */
-  .marquee { background-color: var(--secondary-color); color: var(--primary-color); overflow: hidden; white-space: nowrap; padding: 10px 0; font-weight: bold; text-align: center; }
-  .marquee span { display: inline-block; animation: marquee 20s linear infinite; }
-  @keyframes marquee {
-    0% { transform: translateX(-100%); }
-    100% { transform: translateX(100%); }
-  }
-  
-  /* عناوين الأقسام */
-  h2 { color: var(--primary-color); margin: 25px 0 15px; border-bottom: 3px solid var(--accent-color); padding-bottom: 8px; font-size: 24px; font-weight: 700; }
-  
-  /* الأزرار والروابط */
-  .btn { display: inline-block; padding: 12px 25px; background: var(--primary-color); color: #fff; text-decoration: none; border-radius: 8px; font-weight: 700; transition: transform 0.3s, box-shadow 0.3s; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); }
-  .btn:hover { background: #003366; transform: translateY(-3px); box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25); }
-  .btn-register { background: var(--accent-color); color: var(--primary-color); font-weight: 800; }
-  .btn-register:hover { background: #44b694; }
-
-  /* القوائم والأيقونات */
-  ul { list-style: none; padding-left: 0; }
-  li { margin-bottom: 12px; display: flex; align-items: flex-start; font-size: 16px; }
-  li i { color: var(--secondary-color); margin-left: 10px; font-size: 20px; transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out; }
-  li:hover i { transform: rotate(10deg) scale(1.1); filter: brightness(1.2); }
-
-  /* تصميم السلايدر (آراء المتدربين والمدربين) */
-  .testimonials-slider, .instructors-slider {
-      position: relative;
-      overflow: hidden;
-      margin-top: 20px;
-      padding: 20px;
-      background: #f0f8ff;
-      border-radius: 12px;
-      box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
-  }
-  .testimonial-slide, .instructor-slide {
-      display: none;
-      text-align: center;
-  }
-  .testimonial-slide.active, .instructor-slide.active {
-      display: block;
-  }
-  .instructor-card img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid var(--accent-color);
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  }
-  .instructor-card h4 { margin-top: 15px; color: var(--primary-color); font-size: 18px; }
-  .instructor-card p { font-size: 14px; color: #6c757d; margin-top: 5px; }
-  .testimonial-text { font-style: italic; }
-  .slider-dots { text-align: center; margin-top: 15px; }
-  .dot { display: inline-block; width: 10px; height: 10px; margin: 0 5px; background: #ccc; border-radius: 50%; cursor: pointer; transition: background 0.3s; }
-  .dot.active { background: var(--primary-color); }
-  
-  /* قسم الأسئلة الشائعة (FAQ) */
-  .faq-item { margin-bottom: 15px; }
-  .faq-question {
-    background: #e9ecef;
-    padding: 15px;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 600;
-    transition: background 0.3s, box-shadow 0.3s;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-  }
-  .faq-question:hover {
-    background: #dee2e6;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  .faq-answer {
-    background: #f8f9fa;
-    padding: 15px;
-    border-radius: 8px;
-    margin-top: 5px;
-    display: none;
-    line-height: 1.5;
-    animation: fadeIn 0.4s ease-in-out;
-  }
-  @keyframes fadeIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
-  .faq-question i { transition: transform 0.3s; }
-  .faq-question.active i { transform: rotate(180deg); }
-
-  /* قسم الشهادة */
-  .certificate-section { text-align: center; padding: 20px 0; }
-  .certificate-section img { max-width: 100%; height: auto; border: 5px solid var(--primary-color); border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); transition: transform 0.3s; }
-  .certificate-section img:hover { transform: scale(1.03); }
-
-  /* الأزرار الثابتة (Sticky Buttons) في أسفل الصفحة */
-  .sticky-register-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 1000;
-      display: none;
-      padding: 15px 30px;
-      font-size: 16px;
-      border-radius: 50px;
-      font-weight: 700;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-      opacity: 1;
-      visibility: visible;
-      transition: opacity 0.3s ease, visibility 0.3s ease, bottom 0.3s ease;
-  }
-  .sticky-register-btn.hidden {
-      opacity: 0;
-      visibility: hidden;
-      bottom: -100px;
-  }
-  .sticky-whatsapp-btn {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      z-index: 1000;
-      background-color: #25d366;
-      color: #fff;
-      width: 55px;
-      height: 55px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      transition: transform 0.3s, background-color 0.3s, opacity 0.3s ease, visibility 0.3s ease, bottom 0.3s ease;
-      opacity: 1;
-      visibility: visible;
-  }
-  .sticky-whatsapp-btn:hover {
-      transform: scale(1.1) translateY(-3px);
-      background-color: #128c7e;
-  }
-  .sticky-whatsapp-btn i { font-size: 28px; }
-  .sticky-whatsapp-btn.hidden {
-      opacity: 0;
-      visibility: hidden;
-      bottom: -100px;
-  }
-
-  /* تصميم قسم التذييل (Footer) */
-  footer {
-    background: var(--primary-color);
-    color: #fff;
-    padding: 30px 20px;
-    text-align: center;
-    border-top: 5px solid var(--secondary-color);
-  }
-  .footer-content { max-width: 900px; margin: 0 auto; }
-  .footer-links { margin-bottom: 20px; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; }
-  .footer-links a { color: #fff; text-decoration: none; font-size: 14px; transition: color 0.3s; }
-  .footer-links a:hover { color: var(--accent-color); }
-  .footer-social { margin-top: 20px; margin-bottom: 20px; display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; }
-  .footer-social a { color: #fff; font-size: 24px; transition: transform 0.3s; }
-  .footer-social a:hover { color: var(--secondary-color); transform: scale(1.2); }
-  .footer-copy { margin-top: 15px; font-size: 13px; }
-</style>
+<link rel="stylesheet" href="css/course.css">
 </head>
 <body>
 
@@ -256,6 +28,7 @@
     <a href="courses.html">الدورات</a>
     <a href="contact.html">تواصل معنا</a>
   </nav>
+  <span id="status-indicator"></span>
 </header>
 
 <div class="hero" data-aos="fade-up">
@@ -349,6 +122,9 @@
 
     // رابط الـ Google Apps Script الذي يجلب بيانات الدورات
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwQ7vlFHMHwVcr11t8UuBqUB5XBQhbINem5HRzhmmcbaQC-dD2RtSxyKZ5lAY2eywmwTA/exec';
+    
+    // الحصول على عنصر إشارة الحالة
+    const statusIndicator = document.getElementById('status-indicator');
 
     // الحصول على معرف الدورة من رابط الصفحة
     const urlParams = new URLSearchParams(window.location.search);
@@ -366,6 +142,8 @@
 
             // في حال عدم العثور على الدورة، يتم عرض رسالة خطأ
             if (!course) {
+                // تعيين الإشارة إلى اللون الأحمر عند الفشل
+                statusIndicator.innerHTML = '🔴';
                 document.getElementById('hero-title').innerText = "⚠️ لم يتم العثور على الدورة المطلوبة";
                 document.getElementById('hero-description').innerText = "يرجى العودة إلى صفحة الدورات واختيار دورة صحيحة.";
                 // إخفاء جميع الأقسام لمنع ظهورها فارغة
@@ -560,15 +338,18 @@
                 registerLink.href = `form.html?course=${encodedCourseTitle}`;
             }
             
-            // ✅ السطر الذي يحل المشكلة:
+            // تعيين الإشارة إلى اللون الأخضر عند النجاح
+            statusIndicator.innerHTML = '🟢';
             // استدعاء دالة تشغيل السلايدر بعد اكتمال تحميل البيانات
             window.startSliders();
 
         } catch (err) {
             console.error('Error fetching course data:', err);
+            // تعيين الإشارة إلى اللون الأحمر عند الفشل
+            statusIndicator.innerHTML = '🔴';
             // عرض رسالة خطأ في حال فشل جلب البيانات
             document.getElementById('hero-title').innerText = "⚠️ حدث خطأ أثناء تحميل البيانات";
-            document.getElementById('hero-description').innerText = "تأكد من اتصالك بالإنترنت وحاول مرة أخرى.";
+            document.getElementById('hero-description').innerHTML = "تأكد من اتصالك بالإنترنت وحاول مرة أخرى. <br><br> <a href='#' class='btn btn-register' onclick='loadCourseData(); return false;'>إعادة المحاولة</a>";
             // إخفاء جميع الأقسام لمنع ظهورها فارغة
             document.querySelector('.marquee').style.display = 'none';
             document.querySelector('.video-section').style.display = 'none';
